# POSIXParallelImageFilter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.mk  Readme.md  cmake_install.cmake  image-effect.cpp  my-effect  script.sh  times.txt
